syntax = "proto3";
option optimize_for = LITE_RUNTIME;
import "data.proto";
package bwapi.game;


// TODO
message FrameUpdate {
	bwapi.data.GameData gameData = 1;
}

message EndOfQueue {
}
